FIX : Menu not centred

--- a/style.css
+++ b/style.css
@@ -17,10 +17,6 @@ Text Domain: purecss
 /************************************************************************************/
 /*	Custom Mixins	*/
 /************************************************************************************/
-menu, ol, ul {
-  padding: 0 0 0 40px;
-}
-
 * {
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
